[package]
name = "sarctool"
version = "1.0.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[[bin]]
name = "sarc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sarc = "1.2.0"
zip = "0.5"
structopt = "0.3.12"
glob = "0.3.0"
prettytable-rs = "0.8.0"
humansize = "1.1.0"
